app/assets/stylesheets/church.sass
#church_index
  li
    min-height: 360px !important
.church_info.churches
  min-height: 270px !important
  p.church_info_stats
    width: 150px
    small
      font-size: 10px
      width: 100px
      text-align: right
      display: inline-block
    span.church_size, span.members
      padding: 5px 10px
      background: rgb(0, 174, 115)
      border-radius: 7px
      font-size: 14px
    span.members
      background: rgba(0, 115, 175, 1)

